код подготовлен к первому ревью