@@ -7,17 +7,17 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.service.MyPageable;
 import ru.yandex.practicum.service.Statistics;
-import ru.yandex.practicum.service.dto.ParticipationRequestDto;
 import ru.yandex.practicum.service.dto.events.EventFullDto;
 import ru.yandex.practicum.service.dto.events.EventShortDto;
 import ru.yandex.practicum.service.dto.events.NewEventDto;
 import ru.yandex.practicum.service.dto.events.UpdateEventRequest;
+import ru.yandex.practicum.service.dto.requests.ParticipationRequestDto;
 import ru.yandex.practicum.service.enums.State;
 import ru.yandex.practicum.service.enums.Status;
 import ru.yandex.practicum.service.exeptions.MyNotFoundException;
 import ru.yandex.practicum.service.exeptions.MyValidationException;
-import ru.yandex.practicum.service.mappers.RequestMapper;
 import ru.yandex.practicum.service.mappers.events.EventFullMapper;
+import ru.yandex.practicum.service.mappers.requests.RequestMapper;
 import ru.yandex.practicum.service.models.Event;
 import ru.yandex.practicum.service.models.Request;
 import ru.yandex.practicum.service.repositories.CategoryRepository;
@@ -25,6 +25,7 @@ import ru.yandex.practicum.service.repositories.EventRepository;
 import ru.yandex.practicum.service.repositories.RequestRepository;
 import ru.yandex.practicum.service.repositories.UserRepository;
 
+import javax.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
@@ -37,39 +38,48 @@ public class EventPrivateServiceImpl implements EventPrivateService {
     private final EventRepository eventRepository;
     private final CategoryRepository categoryRepository;
     private final RequestRepository requestRepository;
-    private DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    private final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
     private final Statistics statistics;
-    @Lazy
-    private final RequestMapper requestMapper;
     @Lazy
     private final EventFullMapper eventFullMapper;
 
     @Autowired
-    public EventPrivateServiceImpl(UserRepository userRepository, EventRepository eventRepository, CategoryRepository categoryRepository, RequestRepository requestRepository, Statistics statistics, RequestMapper requestMapper, EventFullMapper eventFullMapper) {
+    public EventPrivateServiceImpl(UserRepository userRepository, EventRepository eventRepository, CategoryRepository categoryRepository, RequestRepository requestRepository, Statistics statistics, EventFullMapper eventFullMapper) {
         this.userRepository = userRepository;
         this.eventRepository = eventRepository;
         this.categoryRepository = categoryRepository;
         this.requestRepository = requestRepository;
         this.statistics = statistics;
-        this.requestMapper = requestMapper;
         this.eventFullMapper = eventFullMapper;
     }
 
+    /**
+     * Выдача списка событий, созданных пользователем
+     *
+     * @param userId Long
+     * @param from int
+     * @param size int
+     * @return List<EventShortDto>
+     */
     @Override
     public List<EventShortDto> getEventsOfUser(Long userId, int from, int size) {
         userValidation(userId);
         Pageable pageable = MyPageable.of(from, size);
-//        List<Event> events = eventRepository.findByInitiatorId(userId, pageable).
-
-        return statistics.getListEventShortDtoWithViews(eventRepository.findByInitiatorId(userId, pageable).toList());
-
-//        return eventRepository.findByInitiator(userId, pageable).stream()
-//                .map(EventShortMapper::toEventShortDto)
-//                .collect(Collectors.toList());
+        List<EventShortDto> eventShortDtos = statistics.getListEventShortDtoWithViews(eventRepository.findByInitiatorId(userId, pageable).toList());
+        log.info("Пользователю с id={} выдан список созданных им событий", userId);
+        return eventShortDtos;
     }
 
+    /**
+     * Обновление события пользователем
+     *
+     * @param userId Long
+     * @param updateEventRequest UpdateEventRequest
+     * @return EventFullDto
+     */
     @Override
+    @Transactional
     public EventFullDto updateEvent(Long userId, UpdateEventRequest updateEventRequest) {
         userValidation(userId);
         eventValidation(updateEventRequest.getEventId());
@@ -82,7 +92,6 @@ public class EventPrivateServiceImpl implements EventPrivateService {
         if (event.getState().equals(State.PUBLISHED)) {
             throw new MyValidationException("Только отмененные или ожидающие публикации события могут быть обновлены");
         }
-
 
         if (updateEventRequest.getAnnotation() != null) {
             event.setAnnotation(updateEventRequest.getAnnotation());
@@ -107,11 +116,9 @@ public class EventPrivateServiceImpl implements EventPrivateService {
             event.setParticipantLimit(updateEventRequest.getParticipantLimit());
         }
 
-        // TODO: 27.09.2022 возможно, не требуется (в примере нет)
         if (updateEventRequest.getRequestModeration() != null) {
             event.setRequestModeration(updateEventRequest.getRequestModeration());
         }
-
 
         if (updateEventRequest.getTitle() != null) {
             event.setTitle(updateEventRequest.getTitle());
@@ -120,22 +127,38 @@ public class EventPrivateServiceImpl implements EventPrivateService {
             event.setState(State.PENDING);
         }
 
-        // TODO: 02.10.2022 нужны ли здесь просмотры?
-
-        return eventFullMapper.toEventFullDto(eventRepository.save(event));
+        EventFullDto dto = eventFullMapper.toEventFullDto(eventRepository.save(event));
+        log.info("Событие с id={} обновлено пользователем с id={}", dto.getId(), userId);
+        return dto;
     }
 
+    /**
+     * Выдача события пользователю по id
+     *
+     * @param userId Long
+     * @param eventId Long
+     * @return EventFullDto
+     */
     @Override
     public EventFullDto getEvent(Long userId, Long eventId) {
         userValidation(userId);
         eventValidation(eventId);
         Event event = eventRepository.findById(eventId).get();
         initiatorValidation(userId, event.getInitiator().getId());
-        return statistics.getEventFullDtoWithViews(eventFullMapper.toEventFullDto(event));
-//        return eventFullMapper.toEventFullDto(event);
+        EventFullDto dto = statistics.getEventFullDtoWithViews(eventFullMapper.toEventFullDto(event));
+        log.info("Событие с id={} предоставлено пользователю с id={}", eventId, userId);
+        return dto;
     }
 
+    /**
+     * Создание события
+     *
+     * @param userId Long
+     * @param dto NewEventDto
+     * @return EventFullDto
+     */
     @Override
+    @Transactional
     public EventFullDto postEvent(Long userId, NewEventDto dto) {
         userValidation(userId);
         LocalDateTime now = LocalDateTime.now();
@@ -155,10 +178,20 @@ public class EventPrivateServiceImpl implements EventPrivateService {
                 dto.isRequestModeration(),
                 dto.getTitle(),
                 State.PENDING);
-        return eventFullMapper.toEventFullDto(eventRepository.save(event));
+        EventFullDto eventFullDto = eventFullMapper.toEventFullDto(eventRepository.save(event));
+        log.info("Событие с id={} создано пользователем с id={}", eventFullDto.getId(), userId);
+        return eventFullDto;
     }
 
+    /**
+     * Отмена события пользователем
+     *
+     * @param userId Long
+     * @param eventId Long
+     * @return EventFullDto
+     */
     @Override
+    @Transactional
     public EventFullDto cancelEvent(Long userId, Long eventId) {
         userValidation(userId);
         eventValidation(eventId);
@@ -168,21 +201,41 @@ public class EventPrivateServiceImpl implements EventPrivateService {
             throw new MyValidationException("Только ожидающее модерации событие может быть отменено");
         }
         event.setState(State.CANCELED);
-        return eventFullMapper.toEventFullDto(eventRepository.save(event));
+        EventFullDto dto = eventFullMapper.toEventFullDto(eventRepository.save(event));
+        log.info("Событие с id={} отменено пользователем с id={}", eventId, userId);
+        return dto;
     }
 
+    /**
+     * Выдача запросов на участие в событии, созданном пользователем
+     *
+     * @param userId Long
+     * @param eventId Long
+     * @return List<ParticipationRequestDto>
+     */
     @Override
     public List<ParticipationRequestDto> getRequests(Long userId, Long eventId) {
         userValidation(userId);
         eventValidation(eventId);
         Event event = eventRepository.findById(eventId).get();
         initiatorValidation(userId, event.getInitiator().getId());
-        return requestRepository.findByEventId(eventId).stream()
-                .map(request -> requestMapper.toRequestDto(request))
+        List<ParticipationRequestDto> dtos = requestRepository.findByEventId(eventId).stream()
+                .map(RequestMapper::toRequestDto)
                 .collect(Collectors.toList());
+        log.info("Запросы на участие в событии с id={} выдано пользователю d={}", eventId, userId);
+        return dtos;
     }
 
+    /**
+     * Подтверждение запроса на участие в событии
+     *
+     * @param userId Long
+     * @param eventId Long
+     * @param reqId Long
+     * @return ParticipationRequestDto
+     */
     @Override
+    @Transactional
     public ParticipationRequestDto confirmRequest(Long userId, Long eventId, Long reqId) {
         userValidation(userId);
         eventValidation(eventId);
@@ -191,10 +244,22 @@ public class EventPrivateServiceImpl implements EventPrivateService {
         eventAndInitiatorRequestValidation(reqId, eventId, userId);
         Request request = requestRepository.findById(reqId).get();
         request.setStatus(Status.CONFIRMED);
-        return requestMapper.toRequestDto(requestRepository.save(request));
+        ParticipationRequestDto dto = RequestMapper.toRequestDto(requestRepository.save(request));
+        log.info("Заявка пользователя с id={} на участие в событии с id={} подтверждена пользователем с id={}",
+                dto.getRequester(), eventId, userId);
+        return dto;
     }
 
+    /**
+     * Отклонение заявки на участие в событии
+     *
+     * @param userId Long
+     * @param eventId Long
+     * @param reqId Long
+     * @return ParticipationRequestDto
+     */
     @Override
+    @Transactional
     public ParticipationRequestDto rejectRequest(Long userId, Long eventId, Long reqId) {
         userValidation(userId);
         eventValidation(eventId);
@@ -202,38 +267,76 @@ public class EventPrivateServiceImpl implements EventPrivateService {
         eventAndInitiatorRequestValidation(reqId, eventId, userId);
         Request request = requestRepository.findById(reqId).get();
         request.setStatus(Status.REJECTED);
-        return requestMapper.toRequestDto(requestRepository.save(request));
+        ParticipationRequestDto dto = RequestMapper.toRequestDto(requestRepository.save(request));
+        log.info("Заявка пользователя с id={} на участие в событии с id={} отклонена пользователем с id={}",
+                dto.getRequester(), eventId, userId);
+        return dto;
     }
 
+    /**
+     * Проверка наличия пользователя в базе по id
+     *
+     * @param id Long
+     */
     private void userValidation(Long id) {
         if (!userRepository.existsById(id)) {
             throw new MyNotFoundException(String.format("Пользователь с id = '%s' не найден", id));
         }
     }
 
+    /**
+     * Проверка наличия события в базе по id
+     *
+     * @param id Long
+     */
     private void eventValidation(Long id) {
         if (!eventRepository.existsById(id)) {
             throw new MyNotFoundException(String.format("Событие с id = '%s' не найдено", id));
         }
     }
 
+    /**
+     * Проверка, является ли пользователь создателем события
+     *
+     * @param userId Long
+     * @param eventId Long
+     */
     private void initiatorValidationWithEventId(Long userId, Long eventId) {
         if (userId != eventRepository.findById(eventId).get().getInitiator().getId()) {
             throw new MyValidationException("Только пользователь, создавший событие, может совершить с ним данное действие");
         }
     }
+
+    /**
+     * Проверка, является ли пользователь создателем события
+     *
+     * @param userId Long
+     * @param initiatorId Long
+     */
     private void initiatorValidation(Long userId, Long initiatorId) {
         if (userId != initiatorId) {
             throw new MyValidationException("Только пользователь, создавший событие, может совершить с ним данное действие");
         }
     }
 
-    private void requestValidation(Long reqId) {
-        if (!requestRepository.existsById(reqId)) {
-            throw new MyNotFoundException(String.format("Заявка на участие в событие с id = '%s' не найдена", reqId));
+    /**
+     * Проверка наличия запроса на участие в событии в базе по id
+     *
+     * @param id Long
+     */
+    private void requestValidation(Long id) {
+        if (!requestRepository.existsById(id)) {
+            throw new MyNotFoundException(String.format("Заявка на участие в событие с id = '%s' не найдена", id));
         }
     }
 
+    /**
+     * Проверка наличия запроса на участие в событии в базе по id, а также является ли пользователь создателем события
+     *
+     * @param reqId Long
+     * @param eventId Long
+     * @param userId Long
+     */
     private void eventAndInitiatorRequestValidation(Long reqId, Long eventId, Long userId) {
         Request request = requestRepository.findById(reqId).get();
         if (eventId != request.getEvent().getId()) {
